[package]
name = "smworker"
version = "0.0.1"
authors = ["Sankha Narayan Guria <sankha93@gmail.com>"]

[lib]
name = "smworker"
path = "src/lib.rs"
test = true

[[bin]]
name = "smworker-bin"
path = "src/bin.rs"

[dependencies.js]
git = "https://github.com/servo/rust-mozjs"

[dependencies]
libc = "0.1"
